# ub-g22-eddl-mdf

./: .gitmodules  README.md
mdf/: .gitignore  README.md  pyproject.toml
mdf/src/mdf/: __init__.py  __main__.py  data.py  diff.py  main.ipynb  ops.py  samplers.py  train.ipynb  viz.ipynb
