[tool.poetry]
name = "mdf"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "mdf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
einops = "^0.8.0"
geomstats = { version="^2.7.0", extras=["pytorch"] }
requests = "^2.31.0"
pywavefront = "^1.3.3"
pyglet = { version ="<2" }
plotly = "^5.22.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
notebook = "^7.1.3"
torch = {version = "=2.2.0", source = "pt-cuda"}
torchvision = {version = "^0.17", source = "pt-cuda"}
fvcore = "^0.1.5.post20221221"
iopath = "^0.1.10"
pyvista = { version="^0.43.7", extras=["all"] }
matplotlib = "^3.8.4"
trame = "^3.6.0"
trame-vtk = "^2.8.8"
trame-vuetify = "^2.5.0"
setuptools = "^69.5.1"
imageio = "^2.34.1"
pyg-lib = {version = "^0.4.0+pt22cu121", source = "pyg-cuda"}
torch-scatter = {version = "^2.1.2+pt22cu121", source = "pyg-cuda"}
torch-sparse = {version = "^0.6.18+pt22cu121", source = "pyg-cuda"}
torch-cluster = {version = "^1.6.3+pt22cu121", source = "pyg-cuda"}
torch-spline-conv = {version = "^1.2.2+pt22cu121", source = "pyg-cuda"}
torch-geometric = "^2.5.3"
scipy = "^1.13.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pyg-cuda"
url = "https://data.pyg.org/whl/torch-2.2.0+cu121.html"
priority = "explicit"

[[tool.poetry.source]]
name = "pt-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
